--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "request.js",
   "scripts": {
     "start": "node request.js",
-    "dev": "nodemon request.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "csv-parse": "^5.3.3",
     "nodemon": "^2.0.20"
   }
 }
