--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "csv-parse": "^5.3.3",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
 }
