--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.2",
     "csv-parse": "^5.3.3",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
     "nodemon": "^2.0.20"
   }
 }
